force-app/main/default/objects/redwing__Batch_Operations_Tracking__mdt/redwing__Batch_Operations_Tracking__mdt.object-meta.xml
<CustomObject>
    <label>Batch Operations Tracking</label>
    <pluralLabel>Batch Operations Trackings</pluralLabel>
</CustomObject>