force-app/main/default/objects/redwing__Batch_Operations_Tracking__mdt/fields/redwing__Active__c.field-meta.xml
<CustomField>
    <fullName>redwing__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Defines either this Batch Tracking configuration active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>