force-app/main/default/objects/redwing__Batch_Operations_Tracking__mdt/fields/redwing__Batch_Operations_Storage_Period__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Operations_Storage_Period__c</fullName>
    <inlineHelpText>Defines the length of time (in days) that the Batch Tracking logs (Learning Batch Operations records) will be stored in Salesforce</inlineHelpText>
    <label>Batch Operations Storage Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>