force-app/main/default/objects/redwing__Batch_Operations_Tracking__mdt/fields/redwing__Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>redwing__Batch_Type__c</fullName>
    <inlineHelpText>Defines apex job type for the Batch Tracking configuration</inlineHelpText>
    <label>Batch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple Assignment</fullName>
            </value>
            <value>
                <fullName>Auto-Assign Process</fullName>
            </value>
            <value>
                <fullName>Related Learning</fullName>
            </value>
            <value>
                <fullName>ILT Users Batch</fullName>
            </value>
            <value>
                <fullName>Learning Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>